--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '23.0.1'
 
     defaultConfig {
-        applicationId "com.whinc.customscrollview"
+        applicationId "com.qfoxtech.test"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
