--- a/widget/src/main/AndroidManifest.xml
+++ b/widget/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.whinc.widget">
+          package="com.qfoxtech.android.widget">
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
